[tool.poetry]
name = "csplint"
version = "0.1.0"
description = ""
authors = ["Stanislav Zmiev <zmievsa@gmail.com>"]
license = "MIT"

[tool.poetry.plugins."flake8.extension"]
CSP = 'csplint:CSPPlugin'

[tool.poetry.dependencies]
python = ">=3.10"
tomli = "*"


[tool.poetry.dev-dependencies]
pyupgrade = "*"
black = "*"
autoflake = "*"
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
